# skill_router

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  AIONUI_INSTALL.md  CHANGELOG.md  CONTEXT.md  CONTEXT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENHANCEMENT_SUMMARY.md  ERROR_LOG.md  FINAL_AI_SEARCH_DELIVERY.md  INSTALL.md  LICENSE  MEMOS_REINFORCEMENT_PLAN.md  OpenClaw_SKILL_ROUTER_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  README_ARCHIVE.md  README_SMART_SEARCH.md  RUST_ERROR_LOGGER_CHANGELOG.md  RUST_ERROR_LOGGER_VERIFICATION.md  RUST_MIGRATION_STRATEGY.md  RUST_SKILL_MIGRATION_COMPLETE.md  RUST_SKILL_MIGRATION_PLAN.md  RUST_SKILL_MIGRATION_TASKS.md  SECURITY.md  SHELL_COMMAND_GUIDE.md  SKILL_ROUTER_PROGRESS.md  SMART_SEARCH_DELIVERY.md  TROUBLESHOOTING_CHECKLIST.md  VERSION.md  VERSIONS.md  analyze_versions.ps1  capabilities_manifest.json  check_nested.ps1  (+22 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.skill-router/: registry.json
.skill-router/specs/: MASTER_spec_69c4fefa.md  MASTER_spec_69c520bf.md  (+2 more)
MEMORY/: multicube_manager.json  skill_memory.json
Spec_Docs/: Agent_Task_List.txt  Architecture.txt  Data_Structures.txt  SkillRouter_Spec_v1.txt
adapters/: README.md
aion-cli/: Cargo.toml
aion-cli-gen/: Cargo.toml
aion-cli-gen/src/: analyzer.rs  generator.rs  lib.rs  pipeline.rs
aion-cli/src/: adapter_gen.rs  main.rs  mcp.rs  output.rs
aion-intel/: Cargo.toml
aion-intel/src/: discovery_radar.rs  immunity.rs  lib.rs  online_search.rs  parallel_planner.rs  planner.rs  rag.rs  refinement.rs  synth.rs  tests.rs
aion-memory/: Cargo.toml
aion-router/: Cargo.toml
aion-router/examples/: usage_demo.rs
aion-router/src/: agent_runtime.rs  config.rs  coordinator.rs  crew.rs  distributed_registry.rs  executor.rs  learner.rs  lib.rs  matcher.rs  mcp_client.rs  message_bus.rs  metrics.rs  node_server.rs  parallel_executor.rs  registry.rs  registry_hub.rs  security.rs  tests.rs
aion-router/src/automation/: discovery.rs  error.rs  executor.rs  loop_engine.rs  mod.rs  plan_validator.rs  recovery.rs  state.rs
aion-router/src/builtins/: agent.rs  ai.rs  health_check.rs  mcp.rs  memory.rs  mod.rs  new_skills.rs  orchestrator.rs  parsing.rs  pipeline.rs  rag.rs  spec_driven.rs  task_router.rs  text.rs  web.rs
aion-router/tests/: cpevr_test.rs  discovery_test.rs
aion-sandbox/: Cargo.toml
aion-server/: Cargo.toml
aion-server/src/: error.rs  events.rs  handlers.rs  main.rs  telemetry.rs  tests.rs  ws.rs
aion-types/: Cargo.toml
aion-zl/: Cargo.toml
aion-zl/src/: ai.rs  contract.rs  contradiction.rs  dialectic.rs  engine.rs  main.rs  mcp.rs  retry.rs  strategy.rs
aion_forge/: Cargo.toml  README.md  skill.json
aion_forge/aion-cli/: Cargo.toml
aion_forge/aion-cli/src/: main.rs
aion_forge/aion-intel/: Cargo.toml
aion_forge/aion-intel/src/: discovery_radar.rs  lib.rs  online_search.rs  parallel_planner.rs  planner.rs  synth.rs  tests.rs
aion_forge/aion-memory/: Cargo.toml
aion_forge/aion-memory/src/: lib.rs  memory.rs  tests.rs
aion_forge/aion-router/: Cargo.toml
aion_forge/aion-router/examples/: usage_demo.rs
aion_forge/aion-router/src/: coordinator.rs  executor.rs  lib.rs  loader.rs  matcher.rs  parallel_executor.rs  security.rs  tests.rs
aion_forge/aion-router/src/automation/: discovery.rs  loop_engine.rs  plan_validator.rs  planner.rs  verifier.rs
aion_forge/aion-types/: Cargo.toml
aion_forge/aion-types/src/: ai_native.rs  capability_registry.rs  lib.rs  parallel.rs  types.rs
aion_forge/handoff_info/: AUTOMATION_BACKLOG_POST_PHASE1X.md  AUTOMATION_BASELINE_PHASE1X.md  PHASE2_CHANGE_BOUNDARY.md
docs/: AUTOMATION_BACKLOG_POST_PHASE1X.md  CC执行说明_正式EXE重编译与替换.md  PROJECT_OVERVIEW.md  RELEASE_CRITERIA.md  VERSION_REBASELINE_PLAN.md  forge-evidence.md  会话总结与交接文档_20260402.md  测试报告.md
handoff_info/: AUTOMATION_BASELINE_PHASE1X.md  CODE_REVIEW_GUIDE_PHASE2_1.md  EXPORT_CONVERSATION_AND_CONTEXT.md  PHASE2_CHANGE_BOUNDARY.md  PHASE2_IMPLEMENT_PLAN.md
scripts/: gemini_aion.cmd  install.sh  package-local.sh  package.sh  update-checksums.sh
skill-router/: README.txt  RUST_MIGRATION_COMPLETE.md  config.json  registry.json  迁移完成总结.md
skill-router/skills/google_search/: Cargo.toml  main.rs  skill.json
skill-router/skills/synth_skillsynthesize/: Cargo.toml  main.rs  skill.json
skill-router/skills/yaml_parser/: Cargo.toml  main.rs  skill.json
skills/: ERROR_LOG.md  TROUBLESHOOTING_CHECKLIST.md
skills/autonomous_orchestrator/: Cargo.toml  main.py  main.rs  skill.json
skills/error_logger/: Cargo.toml  ERROR_LOG.md  README.md  TROUBLESHOOTING_CHECKLIST.md  main.rs  skill.json
skills/exa_search/: Cargo.toml  main.rs  skill.json
skills/jina_reader/: Cargo.toml  main.rs  skill.json
skills/synth_jsonparse/: Cargo.toml  main.py  main.rs  skill.json
skills/synth_textsummarize/: Cargo.toml  main.py  main.rs  skill.json
smart-search-cli/: index.js  package.json
src/: async_executor.rs  executor.rs  lib.rs  lifecycle.rs  loader.rs  main.rs  main_cli.rs  matcher.rs  models.rs  online_search.rs  planner.rs  registry.rs  search.rs  security.rs  security_analyzer.rs  skills_finder.rs  synth.rs  teacup_gen.rs
v0.1.0-Final_Core_Pack/: config.json  registry.json
v0.1.0-Final_Package/: Cargo.toml  README.md  config.json  registry.json
v0.1.0-Intelligent_v2/: Cargo.toml
v0.2.0-Shield_Edition_v3/: Cargo.toml  README.md  registry.json
v0.2.0-Shield_Edition_v3/skills/autonomous_orchestrator/: skill.json
v0.2.0-Shield_Edition_v3/skills/autonomous_router_core/src/: main.rs  online_search.rs
v0.2.0-Shield_Edition_v3/skills/synth_textsummarize/: skill.json
v0.2.0-Shield_Edition_v3/src/: lib.rs  loader.rs  main.rs  models.rs  online_search.rs  planner.rs  registry.rs  security_analyzer.rs  synth.rs
v0.2.0-Shield_Edition_v3/src/enhanced/: chain_orchestrator.rs  metrics.rs  mod.rs  parallel_executor.rs  retry_engine.rs  skill_cache.rs  smart_planner.rs
(+125 files in other folders)
