[package]
name = "skill-router"
version = "0.2.1"
edition = "2021"
authors = ["AionUi Team"]
description = "Skill Router - Rust-native autonomous skill discovery and execution system"
repository = "https://github.com/aionui/skill-router"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
urlencoding = "2.1"
futures = "0.3.32"
