[package]
name = "aion-cli"
version = "0.6.0"
edition = "2021"
authors = ["AionCore Team"]
description = "Universal CLI for Skill Router"

[dependencies]
aion-router = { path = "../aion-router" }
aion-intel = { path = "../aion-intel" }
aion-types = { path = "../aion-types" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
