[package]
name = "aion-intel"
version = "0.1.0"
edition = "2021"

[dependencies]
aion-types = { path = "../aion-types" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
