[package]
name = "aion-server"
version = "0.1.0"
edition = "2021"
authors = ["AionCore Team"]
description = "HTTP REST API server for Skill Router — enables cross-language Agent integration"

[dependencies]
aion-router = { path = "../aion-router" }
aion-types  = { path = "../aion-types" }
aion-memory = { path = "../aion-memory" }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
axum        = { workspace = true, features = ["json", "ws"] }
tower-http  = { workspace = true, features = ["cors", "trace"] }
metrics-exporter-prometheus = { workspace = true }
