[workspace]
members = [
    "aion-types",
    "aion-memory",
    "aion-intel",
    "aion-router"
, "aion-cli"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
