[package]
name = "skill-router"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
dashmap = "6.1"
lru = "0.12"
regex = "1.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[features]
default = ["llm_support"]
llm_support = []