[package]
name = "aion-cli"
version = "0.1.0"
edition = "2021"
authors = ["AionCore Team"]
description = "Universal CLI for Skill Router"

[dependencies]
aion-router = { path = "../aion-router" }
aion-types = { path = "../aion-types" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
chrono = { workspace = true }
