[package]
name = "aion-router"
version = "0.1.0"
edition = "2021"

[dependencies]
aion-types = { path = "../aion-types" }
aion-memory = { path = "../aion-memory" }
aion-intel = { path = "../aion-intel" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
