[package]
name = "autonomous_orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Gemini CLI"]
description = "Autonomous Orchestrator Skill - Task decomposition and orchestration"

[[bin]]
name = "autonomous_orchestrator"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
