[package]
name = "exa_search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exa_search"
path = "main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"