[package]
name = "jina_reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jina_reader"
path = "main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.0"