[package]
name = "synth_jsonparse"
version = "0.1.0"
edition = "2021"
authors = ["Gemini CLI"]
description = "JSON Parse Skill - Parse and extract data from JSON"

[[bin]]
name = "synth_jsonparse"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
