[package]
name = "synth_textsummarize"
version = "0.1.0"
edition = "2021"
authors = ["Gemini CLI"]
description = "Text Summarize Skill - Generate text summaries"

[[bin]]
name = "synth_textsummarize"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
