[package]
name = "google_search"
version = "0.1.0"
edition = "2021"
authors = ["Gemini CLI"]
description = "Google Search Skill - Web search and information retrieval"

[[bin]]
name = "google_search"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
