[package]
name = "synth_skillsynthesize"
version = "0.1.0"
edition = "2021"
authors = ["Gemini CLI"]
description = "Skill Synthesize Skill - Generate new skills dynamically"

[[bin]]
name = "synth_skillsynthesize"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
