[package]
name = "yaml_parser"
version = "0.1.0"
edition = "2021"
authors = ["Gemini CLI"]
description = "YAML Parser Skill - Parse and validate YAML files"

[[bin]]
name = "yaml_parser"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
